[package]
name = "event_redis"
version = "0.2.0"
authors = ["Paolo Posso <pvictorsys@gmail.com>", "Moaz bin Mokhtar <moaz.mokhtar@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/redis_server.rs"

[[bin]]
name = "client"
path = "src/redis_client.rs"

[dependencies]
tokio = { version = "*", features = ["full"] }
redis = "*"
uuid = { version = "1.0.0", features = ["v4"] }
serde_json = "*"
serde = {version = "*", features = ["derive"]}
